crates/compiler/test_syntax/tests/snapshots/fail/type_inline_alias.expr.roc
f : I64 as
f = 0

f
